Remplissage du montant total

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -36,4 +36,4 @@ participant:
   placeholderEmail: Adresse Email
   placeholderMontant: Montant de base
   placeholderNombre: Nombre de places
-  plcaholderTotal: Montant Total
+  placeholderTotal: Montant Total
